bizinikiwi/pezframe/support/test/tests/pezpallet_ui/pezpallet_doc_multiple_args.stderr
error: The `pezpallet_doc` received an unsupported argument. Supported format: `pezpallet_doc("PATH")`
  --> tests/pezpallet_ui/pezpallet_doc_multiple_args.rs:20:1
   |
20 | #[pezpallet_doc("A", "B")]
   | ^
